...
                                        }
                                    }) {
                                        Icon(
                                            painter = painterResource(id = if (isPlaying.value) R.drawable.ic_pause2 else R.drawable.round_play_circle),
                                            tint = MaterialTheme.colorScheme.onPrimary,
                                            modifier = Modifier.size(iconSize),
                                            contentDescription = if (isPlaying.value) "Pause" else "Play",
                                        )
                                    }

                                    Button(onClick = {
                                        val startMillis = (startPosition.value * durationSample).toInt()
                                        val endMillis = (endPosition.value * durationSample).toInt()
...
                                    },
                                    ) {
                                        Icon(
                                            painter = painterResource(id = R.drawable.round_content_cut_24),
                                            tint = MaterialTheme.colorScheme.onPrimary,
                                            modifier = Modifier.size(iconSize),
                                            contentDescription = "trim"
                                        )
                                    }
                                }
                            }
                        }
                    }
...
                                            newCurrent.toLong()
                                        )
                                    }
                                }
                            },
                            modifier = Modifier
                                .testTag("doubleSlider")
                                .semantics {
                                    progressBarRangeInfo = ProgressBarRangeInfo(
                                        current = (startPosition.value),
                                        range = 0.0f..1.0f,
                                        steps = 0
                                    )
...
