<resources>
    <string name="app_name">HarryErayAudioRecorder</string>
    <string name="recording">Recording</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="record">Record</string>
    <string name="recordings_list">Recordings List</string>
    <string name="playback">Recording Playback</string>
    <string name="back_button">Back</string>
    <string name="save_recording">Save Recording?</string>
    <string name="edit_recording">Edit Recording</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="attribution">Attribution</string>
    <string name="search_sound">""</string>
    <string name="client_secret">DFYwiCdqrNbhB9RFGiENSXURVlF30uGFrGcLMFWy</string>
</resources>