...

        if (audioViewModel.timerRunning.value) {
            ScalableIconButton(
                onClick = { audioViewModel.stopWithoutSavingRecording()},
                modifier = Modifier
                    .size(iconSize)
                    .semantics { contentDescription = "Delete Icon" },
                iconResId = R.drawable.ic_delete
            )
        } else {
            ScalableIconButton(
                onClick = { audioViewModel.startRecording() },
                modifier = Modifier
                    .size(iconSize)
                    .semantics { contentDescription = "Record Icon" },
                iconResId = R.drawable.ic_record
            )
        }


        if (audioViewModel.timerRunning.value) {
...
                    val defaultFileName = "SystemAudio-$timestamp"
                    audioViewModel.stopRecording(defaultFileName)
                    setShowBottomSheet(true)
                },
                modifier = Modifier
                    .size(iconSize)
                    .semantics { contentDescription = "Stop Icon" },
                iconResId = R.drawable.ic_stop
            )
        } else {
            ScalableIconButton(
                onClick = onListButtonClicked,
                modifier = Modifier
                    .size(iconSize)
                    .semantics { contentDescription = "Menu Icon" },
                iconResId = R.drawable.ic_menu,

            )
        }
    }
}
...
fun BottomSheet(audioViewModel: AudioViewModel, onDismiss: () -> Unit) {
    var text by remember { mutableStateOf(audioViewModel.currentFileName.value?.dropLast(4) ?: "") }
    var showMaxLengthWarning by remember { mutableStateOf(false)}

    AlertDialog(
        onDismissRequest = onDismiss,
        title = { Text("File Name") },
        text = {
            Column {
                TextField(
                    value = text,
                    onValueChange = { newText ->
                        if (newText.length <= 50) {
...

            drawCircle(lineColor, radius = 50f, center = p0, alpha = alphaFloat)
//        drawCircle(Color.Black, radius = 10f, center = p1)
//        drawCircle(Color.Black, radius = 10f, center = p2)
            drawCircle(lineColor, radius = 50f, center = p3, alpha = alphaFloat)
        }
        val msg = if (timerRunning) "recording" else "ready"
        Column(
            verticalArrangement = Arrangement.SpaceEvenly,
            horizontalAlignment = Alignment.CenterHorizontally,
        ) {
            Text(text = msg, fontSize = textSize.value.sp)
            EvenlySpacedText2(text = audioViewModel.formatDurationCantiSec(elapsedTime))
...
