...
                            Button(onClick = {
                                isRepeatOn = !isRepeatOn
                                audioViewModel.setLooping(isRepeatOn)
                            }) {
                                Icon(
                                    painter = painterResource(id = if (isRepeatOn) R.drawable.repeat_on else R.drawable.repeat),
                                    contentDescription = "Repeat",
                                    modifier = Modifier.size(iconSize),
                                    tint = MaterialTheme.colorScheme.onPrimary
                                )
                            }

                            Button(
                                onClick = { showSpeedSlider.value = !showSpeedSlider.value },
                                modifier = Modifier.padding(horizontal = 16.dp)
                            ) {
                                Icon(
                                    painter = painterResource(id = R.drawable.speed),
                                    contentDescription = "Speed",
                                    modifier = Modifier.size(iconSize),
                                    tint = MaterialTheme.colorScheme.onPrimary
                                )
                            }

                            Button(onClick = {
...
                                modifier = Modifier.padding(horizontal = 16.dp)
                            ) {
                                Icon(
                                    painter = painterResource(id = if (isPlaying) R.drawable.ic_pause2 else R.drawable.round_play_circle),
                                    tint = MaterialTheme.colorScheme.onPrimary,
                                    modifier = Modifier.size(iconSize),
                                    contentDescription = if (isPlaying) "Stop" else "Play",
                                )
                            }

                            Button(onClick = {
                                audioViewModel.fastForward((durationSample * 0.1f).toInt())
                                audioViewModel.setPlaybackSpeed(playbackSpeed.value)
...
                        value = playbackSpeed.value,
                        onValueChange = {
                            playbackSpeed.value = it
                            audioViewModel.setPlaybackSpeed(it)
                        },
                        valueRange = 0.25f..4.0f,
                        modifier = Modifier.padding(8.dp).testTag("SpeedSlider")
                    )
                }
                else {
                    val displayedFileName = if (fileName.length > displayedTextLengthPortrait) fileName.substring(0, displayedTextLengthPortrait) + "…" else fileName
                    Text(text = displayedFileName,
                        fontSize = textSize.value.sp,
...
